# movie-knowledge-graph-search-engine

./: LICENSE  README.md  app.py  pyproject.toml  semantic_search.py
